# ort-lua

./: CMakeLists.txt  README.md  custom_op.cc  custom_op.h  custom_op_test.cc  environment.yml  lang_ops.cc  lang_ops.h  lang_ops.hpp  lua_op.cc  lua_op.cpp  lua_op.h  lua_op.hpp  requirements.txt  test.py
src/: lang_ops.cpp  lua_op.cpp  onnxruntime_api.hpp
tests/: test.py
